# testing_demo_spa

./: .gitignore  README.md  api.py  docx_to_html.py  main.py  output2.html  pyproject.toml  requirements.txt  test_output.html  test_sample.docx  testing_plan.md
.github/workflows/: test.yml
playwright-report/: test.md
static/: app.js  index.html  style.css
tests/: test_api.py  test_docx_to_html.py  ui.spec.ts
