[project]
name = "testing-demo-spa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.27.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.23.0",
]
